<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:divider="@null"
    android:dividerHeight="0dp">

    <TextView
        android:id="@+id/mag_text_view"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/magnitude_circle"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="@color/colorMagText"
        android:textSize="16sp"
        tools:text="@string/placeholder_mag" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_M"
        android:layout_marginLeft="@dimen/size_M"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/region_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRegText"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:text="@string/placeholder_region" />

        <TextView
            android:id="@+id/place_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            tools:text="@string/placeholder_place" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/colorDateText"
            android:textSize="12sp"
            tools:text="@string/placeholder_date" />

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/colorDateText"
            android:textSize="12sp"
            tools:text="@string/placeholder_time" />

    </LinearLayout>

</LinearLayout>